fixed title being too large

--- a/static/style.css
+++ b/static/style.css
@@ -153,9 +153,10 @@ header {
 }
 
 header h1 {
-    text-align:center;
-    font-size:1em;
-    padding:1em 0;
+    margin-left:7em;
+    font-size:0.8em;
+    line-height:0px;
+    padding:25px 0;
     color:#fff;
     text-shadow: 0px -1px 0px #1f284d;
 }
